@@ -42,6 +42,7 @@ import com.starrocks.sql.ast.Relation;
 import com.starrocks.sql.ast.SelectList;
 import com.starrocks.sql.ast.SelectListItem;
 import com.starrocks.sql.common.StarRocksPlannerException;
+import org.apache.commons.collections4.CollectionUtils;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -50,6 +51,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
@@ -76,13 +78,20 @@ public class SelectAnalyzer {
         analyzeWhere(whereClause, analyzeState, sourceScope);
 
         List<Expr> outputExpressions =
-                analyzeSelect(selectList, fromRelation, groupByClause != null, analyzeState, sourceScope);
+                analyzeSelect(selectList, fromRelation, analyzeState, sourceScope);
         Scope outputScope = analyzeState.getOutputScope();
 
         List<Expr> groupByExpressions = new ArrayList<>(
                 analyzeGroupBy(groupByClause, analyzeState, sourceScope, outputScope, outputExpressions));
+
+        boolean distinctWithoutGroupBy = selectList.isDistinct() && groupByExpressions.isEmpty();
         if (selectList.isDistinct()) {
-            groupByExpressions.addAll(outputExpressions);
+            if (!groupByExpressions.isEmpty()) {
+                new AggregationAnalyzer(session, analyzeState, groupByExpressions, sourceScope, null)
+                        .verify(outputExpressions);
+            } else {
+                groupByExpressions.addAll(outputExpressions);
+            }
         }
 
         analyzeHaving(havingClause, analyzeState, sourceScope, outputScope, outputExpressions);
@@ -112,8 +121,8 @@ public class SelectAnalyzer {
                 throw new SemanticException("cannot combine '*' in select list with GROUP BY: *");
             }
 
-            if (!aggregates.isEmpty() && selectList.isDistinct()) {
-                throw new SemanticException("cannot combine SELECT DISTINCT with aggregate functions or GROUP BY");
+            if (distinctWithoutGroupBy && !aggregates.isEmpty()) {
+                throw new SemanticException("cannot combine SELECT DISTINCT with aggregate functions without GROUP BY");
             }
 
             new AggregationAnalyzer(session, analyzeState, groupByExpressions, sourceScope, null)
@@ -193,8 +202,7 @@ public class SelectAnalyzer {
         analyzeState.setLimit(analyzeLimit(limitElement, analyzeState, sourceScope));
     }
 
-    private List<Expr> analyzeSelect(SelectList selectList, Relation fromRelation, boolean hasGroupByClause,
-                                     AnalyzeState analyzeState, Scope scope) {
+    private List<Expr> analyzeSelect(SelectList selectList, Relation fromRelation, AnalyzeState analyzeState, Scope scope) {
         ImmutableList.Builder<Expr> outputExpressionBuilder = ImmutableList.builder();
         ImmutableList.Builder<Field> outputFields = ImmutableList.builder();
         List<Integer> outputExprInOrderByScope = new ArrayList<>();
@@ -208,7 +216,7 @@ public class SelectAnalyzer {
                         .collect(Collectors.toList());
                 List<String> unknownTypeFields = fields.stream()
                         .filter(field -> field.getType().getPrimitiveType().equals(PrimitiveType.UNKNOWN_TYPE))
-                        .map(Field::getName).collect(Collectors.toList());
+                        .map(Field::getName).toList();
                 if (!unknownTypeFields.isEmpty()) {
                     throw new SemanticException("Datatype of external table column " + unknownTypeFields
                             + " is not supported!");
@@ -224,6 +232,34 @@ public class SelectAnalyzer {
                             INTERNAL_ERROR);
                 }
 
+                List<String> excludedColumns = item.getExcludedColumns();
+                if (excludedColumns != null && CollectionUtils.isNotEmpty(excludedColumns)) {
+                    Set<String> existingColumnsLower = fields.stream()
+                            .map(field -> field.getName().toLowerCase())
+                            .collect(Collectors.toSet());
+                    Set<String> excludedLower = excludedColumns.stream()
+                            .map(String::toLowerCase)
+                            .collect(Collectors.toSet());
+                    List<String> missingColumns = excludedColumns.stream()
+                            .filter(col -> !existingColumnsLower.contains(col.toLowerCase()))
+                            .collect(Collectors.toList());
+
+                    if (!missingColumns.isEmpty()) {
+                        String tableDesc = item.getTblName() != null ? 
+                                "table '" + item.getTblName() + "'" : "current scope";
+                        throw new SemanticException("Column(s) %s do not exist in %s", 
+                                missingColumns, tableDesc);
+                    }
+
+                    fields = fields.stream()
+                            .filter(field -> !excludedLower.contains(field.getName().toLowerCase()))
+                            .collect(Collectors.toList());
+                    if (fields.isEmpty()) {
+                        String tableDesc = item.getTblName() != null ? 
+                                "table '" + item.getTblName() + "'" : "query scope";
+                        throw new SemanticException("EXCLUDE clause removes all columns from %s", tableDesc);
+                    }
+                }
                 for (Field field : fields) {
                     int fieldIndex = scope.getRelationFields().indexOf(field);
                     /*
@@ -293,15 +329,8 @@ public class SelectAnalyzer {
                         throw new SemanticException("DISTINCT can only be applied to comparable types : %s",
                                 expr.getType());
                     }
-                    if (expr.isAggregate()) {
-                        throw new SemanticException(
-                                "cannot combine SELECT DISTINCT with aggregate functions or GROUP BY");
-                    }
                 });
 
-                if (hasGroupByClause) {
-                    throw new SemanticException("cannot combine SELECT DISTINCT with aggregate functions or GROUP BY");
-                }
                 analyzeState.setIsDistinct(true);
             }
         }
@@ -377,7 +406,7 @@ public class SelectAnalyzer {
         for (Expr expression : outputExpressions) {
             List<AnalyticExpr> window = Lists.newArrayList();
             expression.collect(AnalyticExpr.class, window);
-            if (outputWindowFunctions.stream()
+            if (window.stream()
                     .anyMatch((e -> TreeNode.contains(e.getChildren(), AnalyticExpr.class)))) {
                 throw new SemanticException("Nesting of analytic expressions is not allowed: " + expression.toSql());
             }
@@ -389,7 +418,7 @@ public class SelectAnalyzer {
         for (Expr expression : orderByExpressions) {
             List<AnalyticExpr> window = Lists.newArrayList();
             expression.collect(AnalyticExpr.class, window);
-            if (orderByWindowFunctions.stream()
+            if (window.stream()
                     .anyMatch((e -> TreeNode.contains(e.getChildren(), AnalyticExpr.class)))) {
                 throw new SemanticException("Nesting of analytic expressions is not allowed: " + expression.toSql());
             }
@@ -552,8 +581,8 @@ public class SelectAnalyzer {
         }).collect(Collectors.toList());
     }
 
-    private void analyzeHaving(Expr havingClause, AnalyzeState analyzeState,
-                               Scope sourceScope, Scope outputScope, List<Expr> outputExprs) {
+    private void analyzeHaving(Expr havingClause, AnalyzeState analyzeState, Scope sourceScope,
+                               Scope outputScope, List<Expr> outputExprs) {
         if (havingClause != null) {
             Expr predicate = pushNegationToOperands(havingClause);
 
@@ -562,13 +591,13 @@ public class SelectAnalyzer {
 
             AnalyzerUtils.verifyNoWindowFunctions(predicate, "HAVING");
             AnalyzerUtils.verifyNoGroupingFunctions(predicate, "HAVING");
-
             analyzeExpression(predicate, analyzeState, sourceScope);
 
             if (!predicate.getType().matchesType(Type.BOOLEAN) && !predicate.getType().matchesType(Type.NULL)) {
                 throw new SemanticException("HAVING clause must evaluate to a boolean: actual type %s",
                         predicate.getType());
             }
+
             analyzeState.setHaving(predicate);
         }
     }
